--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,13 @@
-@import './common';
-@import './example';
+@import "./utils/vars";
+@import "./utils/general";
+@import "./utils/common";
+@import "./components/header";
+@import "./components/hero";
+@import "./components/cocktail";
+@import "./components/cards";
+@import "./components/cocktail-modal";
+@import "./components/ingredient-modal";
+@import "./components/favourite-cocktail";
+@import "./components/favourite-ingredient";
+@import "./components/footer";
+@import "./components/dark-light";
